# High-Performance-Computing

./: .gitignore  Makefile  colormap.h  demo.c  gl2d.h  ising.c  ising.h  meson.build  params.h  tiny_ising.c
